# ai-news-aggregator

./: .agent-task.md  .agent-teamlead.md  .env.example  .gitignore  README.md  alembic.ini  compose.yaml  launch.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
app/ai/: dedup_judge.py  embeddings.py  extractor.py  llm_client.py  pi_client.py  summarizer.py
app/api/: __init__.py  routes.py
app/bot/: commands.py  formatting.py  telegram_bot.py
app/clustering/: candidate_search.py  cluster_service.py  story_matcher.py
app/collectors/: gmail.py  rss.py  telegram_submission.py  telegram_user.py  web.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py  0002_embedding_unique_index.py
app/preprocessing/: dedup_pre_summary.py  fetch.py  language.py  parse.py  source_discovery.py  trust.py  urls.py
app/workers/: jobs.py  scheduler.py
config/: sources.yaml  trusted_social_accounts.yaml  trusted_sources.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: download_embedding_model.py  init_oauth.py  run_bot.py  run_worker.py
