[project]
name = "news-bot-ai"
version = "0.1.0"
description = "Personal AI news aggregation bot skeleton"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.16.0",
  "apscheduler>=3.10.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "beautifulsoup4>=4.12.0",
  "langdetect>=1.0.9",
  "readability-lxml>=0.8.1",
  "trafilatura>=2.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "python-dotenv>=1.1.0",
  "PyYAML>=6.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
models = ["sentence-transformers>=4.1.0"]
bot = ["aiogram>=3.20.0"]
collectors = ["telethon>=1.40.0", "feedparser>=6.0.0", "google-api-python-client>=2.170.0", "google-auth-oauthlib>=1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
